--- a/.github/workflows/destroyInfrastructure.yml
+++ b/.github/workflows/destroyInfrastructure.yml
@@ -53,4 +53,4 @@ jobs:
           cd aws-infrastructure/terraform
           chmod +x setup_new_region.sh
           chmod +x w2.sh
-          ./setup_new_region.sh w2.sh ${{ env.AWS_PROFILE }} ${{ env.AWS_REGION }} apply -auto-approve
+          ./setup_new_region.sh w2.sh ${{ env.AWS_PROFILE }} ${{ env.AWS_REGION }} destroy -auto-approve
